15_Logger_DemoController_ProgramCs_AppsettingJson_Logger_Seviyeleri_Hem_Konsol_Hem_Uygulmada_Gorme

--- a/CollegeApp_2/appsettings.json
+++ b/CollegeApp_2/appsettings.json
@@ -1,9 +1,31 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+
+    /// Logger ; logger seviyelerini buradan bilicez
+    // Program.cs de " builder.Logging.AddConsole();  "  ve " builder.Logging.AddDebug(); "  ekledigimizden assagida bu ikisini akliyoruz
+
+
+    "Console": { // Console provider.
+        "LogLevel": {
+            "Default": "Error", // Overrides preceding LogLevel:Default setting.
+            "Microsoft.Hosting": "Trace" // Debug:Microsoft.Hosting category.
+        }
+    },
+    "Debug": { // Debug provider.
+        "LogLevel": {
+            "Default": "Trace", // Overrides preceding LogLevel:Default setting.
+            "Microsoft.Hosting": "Error" // Debug:Microsoft.Hosting category.
+        }
+    },
+
+    ///
+
+
+
+    "AllowedHosts": "*"
 }
