16_CollegeDBContextde_ConsroctionOlusturduk_ProgramcSdeHangiVeriTabaniniKullancagiziGirdik_AoosettinsJsonda_VeritabaniBaglantisiniOlusturduk

--- a/CollegeApp_2/appsettings.json
+++ b/CollegeApp_2/appsettings.json
@@ -27,5 +27,11 @@
 
 
 
-    "AllowedHosts": "*"
+    "AllowedHosts": "*",
+
+    // Veri tabani baglanti dizesini tanimliyoruz
+
+    "ConnectionStrings": {
+        "CollegeAppDBConnection": "Data Source=DESKTOP-6E087Q9\\SQLEXPRESS;Initial Catalog=CollegeAppDB;Integrated Security=True;Trust Server Certificate=True"
+    }
 }
