--- a/CollegeApp_2/appsettings.json
+++ b/CollegeApp_2/appsettings.json
@@ -34,4 +34,10 @@
     "ConnectionStrings": {
         "CollegeAppDBConnection": "Data Source=DESKTOP-6E087Q9\\SQLEXPRESS;Initial Catalog=CollegeAppDB;Integrated Security=True;Trust Server Certificate=True"
     }
+
+    // JWT TOKEN ; Secret Key
+
+    "JWTSecret": "This is secter key #½gdfghdfgfg4545{[]fbsdfbbs+%%{[656uyhfgş"
+
+
 }
