--- a/CollegeApp_2/appsettings.json
+++ b/CollegeApp_2/appsettings.json
@@ -37,7 +37,7 @@
 
     // JWT TOKEN ; Secret Key
 
-    "JWTSecret": "This is secter key #½gdfghdfgfg4545{[]fbsdfbbs+%%{[656uyhfgş"
+    "JWTSecret": "This is secter key #½gdfghdfgfg4545{[]fbsdfbbs+%%{[656uyhfgş#½gdfghdfgfg4545{[]fbsdfbbs+%%{[656uyhfgş"
 
 
 }
